My_Python_Notebook：调试-pdb

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -490,3 +490,73 @@ ZeroDivisionError: division by zero
 
 ---
 
+### pdb
+
+前面几种方式都需要插入额外的代码，有没有不需要插入代码的调试方式呢？有的！我们可以启动**Python自带的pdb调试器**，让程序**以单步方式运行**，可以随时查看运行到某一步时各个变量的值。首先编写好 `err.py` 文件：
+
+```python
+# err.py
+s = '0'
+n = int(s)
+print(10 / n)
+```
+
+以参数 `-m pdb` 来启动pdb：
+
+```python
+C:\Users\Administrator\Desktop>python -m pdb err.py
+> c:\users\administrator\desktop\err.py(2)<module>()
+-> s = '0'
+```
+
+此时输出有两行，第一行表示下一步执行的代码属于哪一个代码文件的哪一行（这里是 `err.py` 的第2行）；第二行则是下一步执行的代码。我们可以输入命令 `l` 来查看这行代码的上下文：
+
+```python
+(Pdb) l
+  1     # err.py
+  2  -> s = '0'
+  3     n = int(s)
+  4     print(10 / n)
+[EOF]
+```
+
+输入命令 `n` 可以单步执行该行代码：
+
+```python
+(Pdb) n
+> c:\users\administrator\desktop\err.py(3)<module>()
+-> n = int(s)
+(Pdb) n
+> c:\users\administrator\desktop\err.py(4)<module>()
+-> print(10 / n)
+```
+
+执行后pdb会自动指向下一行代码。特别地，任何时候我们都可以通过输入命令 `p 变量名` 来查看一个变量的值：
+
+```python
+(Pdb) p s
+'0'
+(Pdb) p n
+0
+```
+
+继续执行：
+
+```python
+(Pdb) n
+ZeroDivisionError: division by zero
+> c:\users\administrator\desktop\err.py(4)<module>()
+-> print(10 / n)
+```
+
+此时执行到了出错代码，pdb会报错并停止在这一行，我们可以看到它指向的地方没有发生变化。
+
+输入命令 `q` 可以结束调试，退出pdb：
+
+```python
+(Pdb) q
+
+C:\Users\Administrator\Desktop>
+```
+
+这种通过pdb在命令行调试的方法在理论上是万能的，但实在是太麻烦了，打个比方，如果代码文件中有1000行代码，要运行到第999行就得敲999次命令 `n`，这样还不如执行在代码文件插入代码呢。
