My_Python_Notebook：调试-pdb.set_trace

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -501,7 +501,7 @@ n = int(s)
 print(10 / n)
 ```
 
-以参数 `-m pdb` 来启动pdb：
+以参数 `-m pdb` 来启动pdb调试环境：
 
 ```python
 C:\Users\Administrator\Desktop>python -m pdb err.py
@@ -560,3 +560,42 @@ C:\Users\Administrator\Desktop>
 ```
 
 这种通过pdb在命令行调试的方法在理论上是万能的，但实在是太麻烦了，打个比方，如果代码文件中有1000行代码，要运行到第999行就得敲999次命令 `n`，这样还不如执行在代码文件插入代码呢。
+
+---
+
+### pdb.set_trace
+
+有没有可以直接调到我们需要检查的地方再进行单步调试的调试方式呢？有的！同样是基于pdb，这次我们在代码文件中 `import pdb`，然后，在可能出错的地方插入一句 `pdb.set_trace()`，这就设置了一个断点：
+
+```python
+# err.py
+import pdb
+
+s = '0'
+n = int(s)
+pdb.set_trace() # 运行到这里会自动暂停
+print(10 / n)
+```
+
+直接运行代码，这时程序会自动**在 `pdb.set_trace()` 暂停并进入pdb调试环境**，可以用命令 `p` 查看变量，用命令 `n` 单步执行，或者用命令 `c` 继续运行（**如果有下一个断点就会停在下一个断点，否则直接运行到程序结束**）：
+
+```python
+C:\Users\Administrator\Desktop>python err.py
+> c:\users\administrator\desktop\err.py(7)<module>()
+-> print(10 / n)
+(Pdb) p n
+0
+(Pdb) c
+Traceback (most recent call last):
+  File "err.py", line 7, in <module>
+    print(10 / n)
+ZeroDivisionError: division by zero
+
+C:\Users\Administrator\Desktop>
+```
+
+这种方式的效率要比直接启动pdb进行单步调试更高。
+
+---
+
+
