My_Python_Notebook：调试-IDE

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -598,4 +598,6 @@ C:\Users\Administrator\Desktop>
 
 ---
 
+### IDE
 
+除了上面介绍到的方式之外，使用IDE附带的调试功能也是很常见的。通常IDE会自带一些快捷键，允许我们方便地设置断点、单步执行、查看变量值等等。[PyCharm](http://www.jetbrains.com/pycharm/)是一个不错的选择。
