My_Python_Notebook：调试-小结

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -601,3 +601,9 @@ C:\Users\Administrator\Desktop>
 ### IDE
 
 除了上面介绍到的方式之外，使用IDE附带的调试功能也是很常见的。通常IDE会自带一些快捷键，允许我们方便地设置断点、单步执行、查看变量值等等。[PyCharm](http://www.jetbrains.com/pycharm/)是一个不错的选择。
+
+### 小结
+
+写程序最痛苦的事情莫过于调试，程序往往会以你意想不到的流程来运行，你期待执行的语句其实根本没有执行，这时候，就需要调试了。
+
+虽然用IDE调试起来比较方便，但是最后你会发现，`logging` 才是终极武器。
