My_Python_Notebook：单元测试-什么是单元测试

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -484,7 +484,7 @@ Traceback (most recent call last):
 ZeroDivisionError: division by zero
 ```
 
-这就是使用 `logging` 的好处了，它允许开发者**指定记录信息的级别**，有 `debug`，`info`，`warning`，`error` 等几个级别，当我们指定 `level=INFO` 时，`logging.debug` 就不起作用了。同理，指定 `level=WARNING` 后，`debug` 和 `info` 就不起作用了。这样一来，我们可以很方便地统一控制输出哪个级别的信息，而不用担心调试完还要删除的问题了。
+这就是使用 `logging` 的好处了，它允许开发者**指定记录信息的级别**，按程度由低到高有 `debug`, `info`, `waring`, `error` 几个级别。当我们指定 `level=INFO` 时，`logging.debug` 就不起作用了。同理，指定 `level=WARNING` 后，`debug` 和 `info` 就不起作用了。这样一来，我们可以很方便地统一控制输出哪个级别的信息，而不用担心调试完还要删除的问题了。
 
 使用 `logging` 还有另一个好处就是可以通过很简单的配置，把一条语句同时输出到不同的地方，比如命令行和文件。
 
@@ -613,3 +613,30 @@ C:\Users\Administrator\Desktop>
 ---
 
 <br>
+
+## 单元测试
+
+### 什么是单元测试
+
+如果你听说过**测试驱动开发（TDD：Test-Driven Development）**，单元测试就不陌生。
+
+单元测试是用来**对一个模块、一个函数或者一个类来进行正确性检验的测试工作**。
+
+比如我们实现了一个求绝对值的函数 `abs()`，则测试用例需要包含以下这些情况：
+
+- 输入正数，比如1、1.2、0.99，期待返回值与输入相同；
+- 输入负数，比如-1、-1.2、-0.99，期待返回值与输入相反；
+- 输入0，期待返回0；
+- 输入非数值类型，比如None、[]、{}，期待抛出TypeError。
+
+把上面的测试用例**放到一个测试模块里**，就得到了一个完整的单元测试。
+
+如果单元测试通过，说明我们测试的代码能够正常工作。如果单元测试不通过，要么代码有bug，要么单元测试没有编写好，总之，需要修复代码使单元测试能够通过。
+
+单元测试通过后有什么意义呢？如果我们对 `abs()` 函数代码做了修改，只需要再跑一遍单元测试，如果通过，说明我们的修改不会对 `abs()` 函数原有的行为造成影响，如果测试不通过，说明我们的修改与原有行为不一致，此时我们要么修改代码，要么修改测试。
+
+这种以测试为驱动的开发模式最大的好处就是**确保一个程序模块的行为符合我们设计的测试用例。在将来修改的时候，可以极大程度地保证该模块行为仍然是正确的。**
+
+---
+
+
