--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -639,4 +639,94 @@ C:\Users\Administrator\Desktop>
 
 ---
 
+### 编写一个单元测试
+
+假设我们要编写一个 `Dict` 类，这个类的行为和 `dict` 一致，但是可以通过属性来访问，可以像下面这样使用：
+
+```python
+>>> d = Dict(a=1, b=2)
+>>> d['a']
+1
+>>> d.a
+1
+```
+
+把类定义写在 `mydict.py` 文件中：
+
+```python
+class Dict(dict):
+
+    def __init__(self, **kw):
+        super().__init__(**kw)
+
+    def __getattr__(self, key):
+        try:
+            return self[key]
+        except KeyError:
+            raise AttributeError(r"'Dict' object has no attribute '%s'" % key)
+
+    def __setattr__(self, key, value):
+        self[key] = value
+```
+
+为了编写单元测试，我们需要引入Python自带的 `unittest` 模块，把单元测试写在 `mydict_test.py` 文件中：
+
+```python
+import unittest
+from mydict import Dict
+
+class TestDict(unittest.TestCase):
+
+    def test_init(self):
+        d = Dict(a=1, b='test')
+        self.assertEqual(d.a, 1)
+        self.assertEqual(d.b, 'test')
+        self.assertTrue(isinstance(d, dict))
+
+    def test_key(self):
+        d = Dict()
+        d['key'] = 'value'
+        self.assertEqual(d.key, 'value')
+
+    def test_attr(self):
+        d = Dict()
+        d.key = 'value'
+        self.assertTrue('key' in d)
+        self.assertEqual(d['key'], 'value')
+
+    def test_keyerror(self):
+        d = Dict()
+        with self.assertRaises(KeyError):
+            value = d['empty']
+
+    def test_attrerror(self):
+        d = Dict()
+        with self.assertRaises(AttributeError):
+            value = d.empty
+```
+
+我们使用一个测试类来实现单元测试，把所有类型的测试用例都封装为该类的方法。测试类继承自 `unittest` 模块的 `TestCase` 类。注意，**所有测试方法都必须以 `test` 开头**，不以 `test` 开头的方法不被认为是测试方法，测试的时候不会被执行。
+
+每一类测试样例都需要编写一个 `test_xxx()` 方法。由于 `unittest.TestCase` 提供了很多内置的条件判断方法，我们只需要调用这些方法就可以断言输出是否符合我们的期望。最常用的断言就是 `assertEqual()`：
+
+```python
+self.assertEqual(abs(-1), 1) # 断言函数返回的结果与1相等
+```
+
+另一种重要的断言就是期待抛出指定类型的Error，比如通过 `d['empty']` 访问不存在的 `key` 时，断言会抛出 `KeyError`：
+
+```python
+with self.assertRaises(KeyError):
+    value = d['empty']
+```
+
+而通过 `d.empty` 访问不存在的 `key` 时，我们期待抛出 `AttributeError`：
+
+```python
+with self.assertRaises(AttributeError):
+    value = d.empty
+```
+
+---
+
 
