My_Python_Notebook：单元测试-补充说明（使用with的语法）

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -727,6 +727,33 @@ with self.assertRaises(AttributeError):
     value = d.empty
 ```
 
+当这些断言输出是否符合我们的期望时，测试用例通过，否则测试用例失败。这一小节知识说明怎样编写单元测试，具体怎么进行测试会在后续的小结中详细说明。
+
 ---
 
+### 补充说明
+
+这里补充一下 `with` 语法和 `assertRaises` 方法的说明。
+
+#### 使用with的语法
+
+关于 `with` 语句的相关概念可以看看[浅谈 Python 的 with 语句](http://www.ibm.com/developerworks/cn/opensource/os-cn-pythonwith/index.html)这篇文章。使用 `with` 的语法一般如下：
+
+```python
+with ContextExpression [as alias]:
+    with-body
+```
+
+例如：
+
+```python
+with open(r'somefileName') as f:
+    for line in f:
+        print(line)
+        # ...more code
+```
+
+跟在 `with` 关键字后的表达式称为**上下文表达式**，它必须能返回一个**上下文管理器（Context Manager）**对象。`with` 语句包裹起来的代码块则称为 `with`-语句体（with-body）。如果我们在语句体中不需要用到上下文管理器对象，就不需要为这个对象取别名（alias），也即方括号 `[]` 内的是可忽略的。比方说前面编写测试类的时候就不需要，而上面例子中由于我们需要使用文件对象中，所以取了别名 `f`。
+
+上下文管理器对象都实现了 `__enter__()` 和 `__exit__()` 这两个特殊方法。执行 `__enter__()` 方法会进行**运行时上下文（runtime context）**，执行 `__exit__()` 方法则会退出。我们可以直接调用这两个方法来管理运行时上下文，也可以**使用 `with` 语句进行管理**。在执行 `with`-语句体的代码之前，`__enter__()` 方法会被自动调用，而执行完 `with`-语句体的代码之后，`__exit__()` 方法会被调用来退出运行时上下文。
 
