My_Python_Notebook：单元测试-补充说明（assertRaises方法）

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -757,3 +757,31 @@ with open(r'somefileName') as f:
 
 上下文管理器对象都实现了 `__enter__()` 和 `__exit__()` 这两个特殊方法。执行 `__enter__()` 方法会进行**运行时上下文（runtime context）**，执行 `__exit__()` 方法则会退出。我们可以直接调用这两个方法来管理运行时上下文，也可以**使用 `with` 语句进行管理**。在执行 `with`-语句体的代码之前，`__enter__()` 方法会被自动调用，而执行完 `with`-语句体的代码之后，`__exit__()` 方法会被调用来退出运行时上下文。
 
+#### assertRaises方法
+
+接下来说说 `assertRaises` 方法，它有两种使用方法：
+
+1. `assertRaises(exception, callable, *args, **kwds)`
+2. `assertRaises(exception, msg=None)`
+
+方法1测试我们使用参数 `*args` 和 `**kwds` 调用 `callable` 对象（可能是某个函数/方法）时，是否会出现 `exception` 异常，如果是则测试用例通过，否则测试失败。
+
+方法2同样是测试一个异常是否出现，但当我们只传入异常时，`assertRaises` 方法会返回一个上下文管理器对象，所以我们可以用 `with` 来管理，从而实现判断运行某一段代码（放在 `with`-语句体中）时，是否出现某种异常的测试用例。
+
+特别地，这些** `TestCase` 类提供的断言方法都支持传入一个关键字参数 `msg`，我们可以使用它自定义断言失败时提示的错误信息。
+
+没指定 `msg` 参数时断言失败的报错：
+
+```python
+AssertionError: KeyError not raised
+```
+
+指定了 `msg` 参数（假设指定 `msg = '1234'`）时断言失败的报错：
+
+```python
+AssertionError: KeyError not raised : 1234
+```
+
+---
+
+
