My_Python_Notebook：单元测试-运行单元测试

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -672,8 +672,8 @@ class Dict(dict):
 为了编写单元测试，我们需要引入Python自带的 `unittest` 模块，把单元测试写在 `mydict_test.py` 文件中：
 
 ```python
-import unittest
-from mydict import Dict
+import unittest         # 导入Python自带的单元测试模块unittest
+from mydict import Dict # 导入我们要进行单元测试的模块/类/函数等等
 
 class TestDict(unittest.TestCase):
 
@@ -768,7 +768,7 @@ with open(r'somefileName') as f:
 
 方法2同样是测试一个异常是否出现，但当我们只传入异常时，`assertRaises` 方法会返回一个上下文管理器对象，所以我们可以用 `with` 来管理，从而实现判断运行某一段代码（放在 `with`-语句体中）时，是否出现某种异常的测试用例。
 
-特别地，这些** `TestCase` 类提供的断言方法都支持传入一个关键字参数 `msg`，我们可以使用它自定义断言失败时提示的错误信息。
+特别地，这些** `TestCase` 类提供的断言方法都支持传入一个关键字参数 `msg`**，我们可以使用它自定义断言失败时提示的错误信息。
 
 没指定 `msg` 参数时断言失败的报错：
 
@@ -783,5 +783,72 @@ AssertionError: KeyError not raised : 1234
 ```
 
 ---
+
+### 运行单元测试
+
+一旦编写好单元测试，我们就可以运行单元测试，具体有两种实现方法。
+
+第一次方法是直接在单元测试文件 `mydict_test.py` 的最后加上两行代码：
+
+```python
+if __name__ == '__main__':
+    unittest.main()
+```
+
+这样只要把 `mydict_test.py` 当成普通Python脚本来运行就可以了，运行时就会直接跑单元测试了：
+
+```python
+C:\Users\Administrator\Desktop>python mydict_test.py
+.....
+----------------------------------------------------------------------
+Ran 5 tests in 0.000s
+
+OK
+```
+
+第二种方法是在命令行通过参数 `-m unittest` 来运行单元测试：
+
+```python
+C:\Users\Administrator\Desktop>python3 -m unittest mydict_test
+.....
+----------------------------------------------------------------------
+Ran 5 tests in 0.000s
+
+OK
+```
+
+第二种方法更为推荐，因为这样可以一次批量运行多个单元测试，比方说：
+
+```python
+C:\Users\Administrator\Desktop>python -m unittest mydict_test.py mydict_test.py
+..........
+----------------------------------------------------------------------
+Ran 10 tests in 0.000s
+
+OK
+```
+
+此外，还有很多工具可以自动来运行这些单元测试。
+
+前面都是举单元测试运行通过的例子，接下来补充一个运行不通过的例子，看看有测试用例不通过时，运行单元测试会返回什么。比方说把 `test_keyerror(self)` 方法中的 `value = d['empty']` 语句换为 `pass`，这样语句体就不会返回 `KeyError` 了，断言会失败。看看此时运行单元测试的结果：
+
+```python
+C:\Users\Administrator\Desktop>python -m unittest mydict_test.py
+....F
+======================================================================
+FAIL: test_keyerror (mydict_test.TestDict)
+----------------------------------------------------------------------
+Traceback (most recent call last):
+  File "C:\Users\Administrator\Desktop\mydict_test.py", line 27, in test_keyerror
+    pass
+AssertionError: KeyError not raised
+
+----------------------------------------------------------------------
+Ran 5 tests in 0.000s
+
+FAILED (failures=1)
+```
+
+可以看到这里汇报了失败的源头是 `test_keyerror` 这个测试方法，原因是这个方法的 `pass` 语句没有引起 `KeyError`，使得断言失败。最后还汇报了运行了5个测试、总共运行的时间、单元测试失败、失败的测试数为1。
 
 
