My_Python_Notebook：调试-setUp和tearDown

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -851,4 +851,47 @@ FAILED (failures=1)
 
 可以看到这里汇报了失败的源头是 `test_keyerror` 这个测试方法，原因是这个方法的 `pass` 语句没有引起 `KeyError`，使得断言失败。最后还汇报了运行了5个测试、总共运行的时间、单元测试失败、失败的测试数为1。
 
+### setUp与tearDown
+
+在测试类中除了定义 `test_xxx()` 这样的测试方法，我们还可以编写两个特殊的 `setUp()` 和 `tearDown()` 方法。这两个方法分别**在每次调用一个测试方法的前后被执行**。
+
+那么这两个方法有什么实际意义呢？假设测试时需要启动一个数据库，如果我们在 `setUp()` 方法中编写连接数据库的代码，在 `tearDown()` 方法中编写关闭数据库，这样我们就不必在每个测试方法中重复编写相同的代码了，也即把功能封装起来：
+
+```python
+class TestDict(unittest.TestCase):
+
+    ...
+
+    def setUp(self):
+        print('setUp')
+
+    def tearDown(self):
+        print('tearDown')
+```
+
+再次运行单元测试：
+
+```python
+C:\Users\Administrator\Desktop>python -m unittest mydict_test.py
+setUp
+tearDown
+.setUp
+tearDown
+.setUp
+tearDown
+.setUp
+tearDown
+.setUp
+tearDown
+.
+----------------------------------------------------------------------
+Ran 5 tests in 0.016s
+
+OK
+```
+
+这里看到多出了一些句号 `.`，它们是每个测试方法通过之后会打印的。
+
+---
+
 
