My_Python_Notebook：单元测试-小结

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -894,4 +894,14 @@ OK
 
 ---
 
+### 小结
 
+- 单元测试可以有效地测试某个程序模块的行为，是未来重构代码的信心保证。
+
+- 单元测试的测试用例要覆盖常用的**输入组合、边界条件和异常**。
+
+- 单元测试代码要非常简单，如果测试代码太复杂，那么测试代码本身就可能有bug。
+
+- 单元测试通过了并不意味着程序就没有bug了，但是不通过程序肯定有bug。
+
+- 除了Python自带的 `unittest` 模块，不妨再了解一下 [Nose](https://nose.readthedocs.io/en/latest/) 和 [PyTest](http://docs.pytest.org/en/latest/) 这两个第三方模块。
