My_Python_Notebook：文档测试-使用文档测试

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -905,3 +905,141 @@ OK
 - 单元测试通过了并不意味着程序就没有bug了，但是不通过程序肯定有bug。
 
 - 除了Python自带的 `unittest` 模块，不妨再了解一下 [Nose](https://nose.readthedocs.io/en/latest/) 和 [PyTest](http://docs.pytest.org/en/latest/) 这两个第三方模块。
+
+---
+
+<br>
+
+## 文档测试
+
+如果你经常阅读Python的官方文档，可以看到很多官方文档都带有示例代码。比如 [`re` 模块](https://docs.python.org/2/library/re.html)的官方文档就带了很多示例代码，例如：
+
+```python
+>>> import re
+>>> m = re.search('(?<=abc)def', 'abcdef')
+>>> m.group(0)
+'def'
+```
+
+可以把这些示例代码在Python的交互式环境下输入并执行，结果与文档中的示例代码显示的一致。
+
+这些代码与其他说明**可以写在注释中，然后，由一些工具来自动生成文档**。既然这些代码本身就可以复制出来直接运行，那么，**可不可以自动执行写在注释中的代码**呢？
+
+答案是肯定的，Python内置的 **“文档测试”（`doctest`）模块** 可以提取出注释中的代码并执行测试。
+
+当我们编写注释时，如果写上这样的注释：
+
+```python
+def abs(n):
+    '''
+    Function to get absolute value of number.
+
+    Example:
+
+    >>> abs(1)
+    1
+    >>> abs(-1)
+    1
+    >>> abs(0)
+    0
+    '''
+    return n if n >= 0 else (-n)
+```
+
+无疑更明确地向函数的调用者说明了该函数的期望输入和输出。
+
+`doctest` **严格按照Python交互式命令行的输入和输出来判断测试结果是否正确**。只有**测试异常的时候，可以用 `...` 来代替发生异常时Traceback的部分**（毕竟实在是太长了..）。
+
+不妨用文档测试 `doctest` 来重新实现上一节中为 `Dict` 类编写的单元测试，编写 `mydict.py` 文件：
+
+```python
+# mydict2.py
+class Dict(dict):
+    '''
+    Simple dict but also support access as x.y style.
+    # 以下为文档注释中的代码部分
+    >>> d1 = Dict()
+    >>> d1['x'] = 100
+    >>> d1.x
+    100
+    >>> d1.y = 200
+    >>> d1['y']
+    200
+    >>> d2 = Dict(a=1, b=2, c='3')
+    >>> d2.c
+    '3'
+    >>> d2['empty'] # 注意这里我们使用省略号...来替换了Traceback的细节
+    Traceback (most recent call last):
+        ...
+    KeyError: 'empty'
+    >>> d2.empty
+    Traceback (most recent call last):
+        ...
+    AttributeError: 'Dict' object has no attribute 'empty'
+    '''
+    # 以下为该类的方法
+    def __init__(self, **kw):
+        super(Dict, self).__init__(**kw)
+
+    def __getattr__(self, key):
+        try:
+            return self[key]
+        except KeyError:
+            raise AttributeError(r"'Dict' object has no attribute '%s'" % key)
+
+    def __setattr__(self, key, value):
+        self[key] = value
+
+if __name__=='__main__':
+    import doctest
+    doctest.testmod() # 使用doctest模块的testmod函数来进行文档测试
+```
+
+注意前面我们说的是**注释**，但这个注释并非使用 `#` 号标识的那种注释，而是文档注释，也即文档字符串。按[PEP257](https://www.python.org/dev/peps/pep-0257/)的定义：
+
+> A docstring is a string literal that occurs as the first statement in a module, function, class, or method definition. Such a docstring becomes the __doc__ special attribute of that object.
+
+所以这里 `Dict` 类的第一个字符串就是 `Dict` 类的文档注释，我们把用于文档测试的示例代码按照Python交互式命令行的输入和输出的标准来书写即可（只有测试异常时可以用 `...` 替换掉Traceback的部分）。
+
+运行 `mydict.py`：
+
+```python
+C:\Users\Administrator\Desktop>python mydict.py
+
+```
+
+**文档测试通过时，程序不会有任何输出**。接下来我们试试把 `__getattr__()` 方法注释掉（这样就不能通过把字典的key作为属性来访问了），此时再运行 `mydict.py`：
+
+```python
+C:\Users\Administrator\Desktop>python mydict.py
+**********************************************************************
+File "mydict.py", line 7, in __main__.Dict
+Failed example:
+    d1.x
+Exception raised:
+    Traceback (most recent call last):
+      File "F:\Anaconda3\lib\doctest.py", line 1320, in __run
+        compileflags, 1), test.globs)
+      File "<doctest __main__.Dict[2]>", line 1, in <module>
+        d1.x
+    AttributeError: 'Dict' object has no attribute 'x'
+**********************************************************************
+File "mydict.py", line 13, in __main__.Dict
+Failed example:
+    d2.c
+Exception raised:
+    Traceback (most recent call last):
+      File "F:\Anaconda3\lib\doctest.py", line 1320, in __run
+        compileflags, 1), test.globs)
+      File "<doctest __main__.Dict[6]>", line 1, in <module>
+        d2.c
+    AttributeError: 'Dict' object has no attribute 'c'
+**********************************************************************
+1 items had failures:
+   2 of   9 in __main__.Dict
+***Test Failed*** 2 failures.
+```
+
+可以看到因为没有实现把key作为属性访问的功能，此时文档注释中的两个example（即 `d1.x` 和 `d2.c` 这两行输入）出错了，而文档注释中总共包含9对输入输出example。
+
+注意到，我们只在 `if __name__=='__main__':` 代码块内写了执行文档测试的逻辑，也即只有在命令行中直接运行（`python mydict.py`）时会进行文档测试。而使用者使用这个类，在别的模块中导入该类时，文档测试是不会被执行的。因此，我们不必担心文档测试会在非测试环境下被执行，编写文档测试并不会影响到使用者使用该模块。
