My_Python_Notebook：文档测试-练习

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -912,6 +912,8 @@ OK
 
 ## 文档测试
 
+### 使用文档测试
+
 如果你经常阅读Python的官方文档，可以看到很多官方文档都带有示例代码。比如 [`re` 模块](https://docs.python.org/2/library/re.html)的官方文档就带了很多示例代码，例如：
 
 ```python
@@ -1042,4 +1044,33 @@ Exception raised:
 
 可以看到因为没有实现把key作为属性访问的功能，此时文档注释中的两个example（即 `d1.x` 和 `d2.c` 这两行输入）出错了，而文档注释中总共包含9对输入输出example。
 
-注意到，我们只在 `if __name__=='__main__':` 代码块内写了执行文档测试的逻辑，也即只有在命令行中直接运行（`python mydict.py`）时会进行文档测试。而使用者使用这个类，在别的模块中导入该类时，文档测试是不会被执行的。因此，我们不必担心文档测试会在非测试环境下被执行，编写文档测试并不会影响到使用者使用该模块。
+注意到，我们只在 `if __name__=='__main__':` 代码块内写了执行文档测试的逻辑，也即只有在命令行中直接运行（`python mydict.py`）时会进行文档测试。而使用者使用这个类，在别的模块中导入该类（`from mydict import Dict`）时，文档测试是不会被执行的。因此，我们不必担心文档测试会在非测试环境下被执行，编写文档测试并不会影响到使用者使用该模块。
+
+---
+
+### 练习
+
+对函数 `fact(n)` 编写文档测试并执行：
+
+```python
+def fact(n):
+    '''
+    >>> fact(1)
+    1
+    >>> fact(5)
+    120
+    >>> fact(0)
+    Traceback (most recent call last):
+        ...
+    ValueError
+    '''
+    if n < 1:
+        raise ValueError()
+    if n == 1:
+        return 1
+    return n * fact(n - 1)
+
+if __name__ == '__main__':
+    import doctest
+    doctest.testmod()
+```
