My_Python_Notebook：文档测试-小结

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -1074,3 +1074,13 @@ if __name__ == '__main__':
     import doctest
     doctest.testmod()
 ```
+
+---
+
+### 小结
+
+文档测试非常有用，不但可以用来测试，还可以直接作为示例代码。通过某些文档生成工具，就可以自动把包含文档测试的注释提取出来。用户看文档的时候，同时也能看到文档测试。
+
+---
+
+<br>
