My_Python_Notebook：错误、调试与测试-目录

--- a/My_Python_Notebook/08错误、调试与测试.md
+++ b/My_Python_Notebook/08错误、调试与测试.md
@@ -1,5 +1,40 @@
 # 错误、调试与测试
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [简述](#简述)
+- [错误处理](#错误处理)
+    - [错误码](#错误码)
+    - [try...except...finally](#tryexceptfinally)
+    - [错误的调用链](#错误的调用链)
+    - [记录错误](#记录错误)
+    - [抛出错误](#抛出错误)
+    - [小结](#小结)
+- [调试](#调试)
+    - [直接打印](#直接打印)
+    - [断言](#断言)
+    - [logging](#logging)
+    - [pdb](#pdb)
+    - [pdb.set_trace](#pdbsettrace)
+    - [IDE](#ide)
+    - [小结](#小结-1)
+- [单元测试](#单元测试)
+    - [什么是单元测试](#什么是单元测试)
+    - [编写一个单元测试](#编写一个单元测试)
+    - [补充说明](#补充说明)
+    - [运行单元测试](#运行单元测试)
+    - [setUp与tearDown](#setup与teardown)
+    - [小结](#小结-2)
+- [文档测试](#文档测试)
+    - [使用文档测试](#使用文档测试)
+    - [练习](#练习)
+    - [小结](#小结-3)
+
+<!-- /MarkdownTOC -->
+
+
 ## 简述
 
 在程序运行过程中我们总会遇到各种各样的**错误**。有的错误是程序编写有问题造成的，比如本来应该输出整数结果输出了字符串，这种错误我们通常称之为**bug**，bug是必须修复的；有的错误是用户输入造成的，比如让用户输入email地址，结果得到一个空字符串，这种错误可以通过检查用户输入来做相应的处理；还有一类错误是完全无法预测的，比如写入文件的时候，磁盘满了，写不进去了，或者从网络抓取数据，网络突然断掉了。这类错误也称为**异常**，在程序中通常是必须处理的，否则，程序会因为各种问题终止并退出。Python内置了一套异常处理机制，可以帮助我们处理这些错误。
