My_Python_Notebook：文件读写-file-like Object

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -119,3 +119,10 @@ with open('/Users/michael/test.txt', 'w') as f:
 如果要写入特定编码的文本文件，还可以给 `open()` 函数传入 `encoding` 参数，将要写入的字符串自动转换成指定编码。
 
 ---
+
+### file-like Object
+
+在Python中，除了文件对象之外，内存中的字节流，网络流，自定义流等等，拥有 `read()` 方法的对象统称为 **`file-like Object`**。`file-like Object` 不需要继承自特定的类，只要有 `read()` 方法就行（文件对象的其他方法不一定都需要实现，可以看看[官方说明](https://docs.python.org/2.4/lib/bltin-file-objects.html)），这得益于Python鸭子类型的实现。`StringIO` 就是在内存中创建的 `file-like Object`，常用作临时缓冲。
+
+---
+
