My_Python_Notebook：文件读写-小结

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -156,4 +156,10 @@ b'\xff\xd8\xff\xe1\x00\x18Exif\x00\x00...' # 十六进制表示的字节
 
 ---
 
+### 小结
 
+在Python中，文件读写是通过 `open()` 函数打开的文件对象完成的。使用 `with` 语句操作文件IO是个好习惯。
+
+---
+
+<br>
