My_Python_Notebook：StringIO和BytesIO-StringIO

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -163,3 +163,48 @@ b'\xff\xd8\xff\xe1\x00\x18Exif\x00\x00...' # 十六进制表示的字节
 ---
 
 <br>
+
+## StringIO和BytesIO
+
+### StringIO
+
+很多时候，数据读写不一定是对文件进行的，我们也可以在内存中进行读写操作。
+
+`StringIO` 顾名思义就是**在内存中读写 `str`**。
+
+要把 `str` 写入 `StringIO`，我们需要先创建一个 `StringIO` 对象，然后，像文件一样写入即可：
+
+```python
+>>> from io import StringIO
+>>> f = StringIO()
+>>> f.write('hello')
+5
+>>> f.write(' ')
+1
+>>> f.write('world!')
+6
+>>> print(f.getvalue())
+hello world!
+```
+
+`getvalue()` 方法用于获得 `StringIO` 中的 `str`。
+
+读取 `StringIO` 的方法也和读文件类似：
+
+```python
+>>> from io import StringIO
+>>> f = StringIO('Hello!\nHi!\nGoodbye!') # 用一个str初始化StringIO
+>>> while True:
+...     s = f.readline()
+...     if s == '':
+...         break
+...     print(s.strip())
+...
+Hello!
+Hi!
+Goodbye!
+```
+
+---
+
+
