My_Python_Notebook：StringIO和BytesIO-BytesIO

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -207,4 +207,32 @@ Goodbye!
 
 ---
 
+### BytesIO
+
+`StringIO` 操作的只能是 `str`，如果要操作二进制数据，就需要使用 `BytesIO`。
+
+`BytesIO` 实现了在内存中读写 `bytes`，我们创建一个 `BytesIO`，然后写入一些 `bytes`：
+
+```python
+>>> from io import BytesIO
+>>> f = BytesIO()
+>>> f.write('中文'.encode('utf-8'))
+6
+>>> print(f.getvalue())
+b'\xe4\xb8\xad\xe6\x96\x87'
+```
+
+请注意，写入的不是 `str`，而是经过UTF-8编码的 `bytes`。
+
+和 `StringIO` 类似，读取 `BytesIO`：
+
+```python
+>>> from io import BytesIO
+>>> f = BytesIO(b'\xe4\xb8\xad\xe6\x96\x87') # 用一个bytes初始化BytesIO
+>>> f.read()
+b'\xe4\xb8\xad\xe6\x96\x87'
+```
+
+---
+
 
