My_Python_Notebook：StringIO和BytesIO-为什么使用StringIO和BytesIO

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -235,4 +235,8 @@ b'\xe4\xb8\xad\xe6\x96\x87'
 
 ---
 
+### 为什么使用StringIO和BytesIO
+
+这个问题在Stackoverflow上有[回答](http://stackoverflow.com/questions/4733693/when-is-stringio-used)，为什么我们不直接使用 `str` 和 `bytes`，而要这么别扭地在内存中使用 `StringIO` 和 `BytesIO` 呢？其实呀，主要是因为 **`StringIO` 和 `BytesIO` 都是 `file-like Object`**，可以像文件对象那样使用，当某些库的函数支持文件对象时，我们可以传入 `StringIO` 和 `BytesIO`，也能使用，这一点 `str` 和 `bytes` 是没法做到的。
+
 
