My_Python_Notebook：StringIO和BytesIO-小结

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -343,5 +343,11 @@ seek(pos, whence=0, /) method of _io.StringIO instance
 
 ---
 
+### 小结
 
+`StringIO` 和 `BytesIO` 是在内存中操作 `str` 和 `bytes` 的方法，和读写文件具有一致的接口。
+
+---
+
+<br>
 
