My_Python_Notebook：操作目录和文件-环境变量

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -377,3 +377,27 @@ posix.uname_result(sysname='Darwin', nodename='MichaelMacPro.local', release='14
 ```
 
 注意，`uname()` 函数在Windows系统上不提供，也就是说，**`os` 模块的能否使用某些函数取决于使用者的操作系统**。
+
+---
+
+### 环境变量
+
+在操作系统中定义的环境变量，全部保存在 `os.environ` 变量中。我们可以直接查看操作系统的所有环境变量：
+
+```python
+>>> os.environ
+environ({'VERSIONER_PYTHON_PREFER_32_BIT': 'no', 'TERM_PROGRAM_VERSION': '326', 'LOGNAME': 'michael', 'USER': 'michael', 'PATH': '/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/opt/X11/bin:/usr/local/mysql/bin', ...})
+```
+
+要获取某个环境变量的值，可以调用使用 `os.environ.get('key')` 的方式：
+
+```python
+>>> os.environ.get('PATH')
+'/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/opt/X11/bin:/usr/local/mysql/bin'
+>>> os.environ.get('x', 'default')
+'default'
+```
+
+传入某个环境变量的名称，得到对应的路径。除此之外还可以传入一个字符串作为默认路径（**没有可返回的路径时**会返回默认路径）。
+
+---
