My_Python_Notebook：操作目录和文件-操作目录和文件

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -401,3 +401,92 @@ environ({'VERSIONER_PYTHON_PREFER_32_BIT': 'no', 'TERM_PROGRAM_VERSION': '326', 
 传入某个环境变量的名称，得到对应的路径。除此之外还可以传入一个字符串作为默认路径（**没有可返回的路径时**会返回默认路径）。
 
 ---
+
+### 操作文件和目录
+
+除了前面的 `os` 模块中，操作文件和目录的函数还有一部分放在 `os.path` 模块中。比方说用于生成绝对路径的 `abspath()` 函数：
+
+```python
+>>> os.path.abspath('.') # 点符代表当前工作路径
+'F:\\Python35'
+>>> os.path.abspath('Tools\\demos')
+'F:\\Python35\\Tools\\demos'
+```
+
+在[05模块](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/05%E6%A8%A1%E5%9D%97.md)中归纳过文件搜索路径的一些知识，当我们在程序中需要用到某个文件时，可以使用两种方式来让程序查找到这个文件：
+
+- 一是使用绝对路径，也即完整的路径；
+- 二是使用相对路径（相对当前工作路径而言的路径），并且可以使用点符 `.` 来替代当前工作路径。
+
+注意，**使用相对路径时是可以不使用点符的**，所以上面代码中，为 `Tools\\demos` 生成绝对路径也同样可行。
+
+接下来我们试试创建目录和删除目录：
+
+```python
+# 在某个目录下创建一个新目录，首先生成新目录的完整路径:
+>>> os.path.join('/Users/michael', 'testdir')
+'/Users/michael/testdir'
+# 然后创建一个目录:
+>>> os.mkdir('/Users/michael/testdir')
+# 删掉一个目录:
+>>> os.rmdir('/Users/michael/testdir')
+```
+
+**把两个路径合成一个时，不要直接拼字符串**，而要通过 `os.path.join()` 函数，这样可以**正确处理不同操作系统的路径分隔符**。在Linux/Unix/Mac下，`os.path.join('part1','part2')` 返回这样的字符串：
+
+```python
+part-1/part-2
+```
+
+而Windows下会返回这样的字符串：
+
+```python
+part-1\part-2
+```
+
+同样的道理，**要拆分路径时，也不要直接去拆字符串**，而要通过 `os.path.split()` 函数，这样可以把一个路径拆分为两部分，后一部分总是**最后级别的目录或文件名**：
+
+```python
+>>> os.path.split('/Users/michael/testdir/file.txt')
+('/Users/michael/testdir', 'file.txt')
+```
+
+`os.path.splitext()` 函数可以用来**获取文件扩展名**，很多时候非常方便：
+
+```python
+>>> os.path.splitext('/path/to/file.txt')
+('/path/to/file', '.txt')
+```
+
+这些合并、拆分路径的函数**并不要求文件和目录真实存在**，它们只是对字符串进行操作。
+
+文件操作使用下面的函数。假定当前目录下有一个 `test.txt` 文件：
+
+```python
+# 对文件重命名:
+>>> os.rename('test.txt', 'test.py')
+# 删掉文件:
+>>> os.remove('test.py')
+```
+
+但是 `os` 模块中不存在复制文件的函数！原因是**复制文件并非是由操作系统提供的系统调用**。理论上讲，我们通过上一节的读写文件可以完成文件复制，只不过要多写很多代码。
+
+幸运的是 `shutil` 模块提供了 `copyfile()` 的函数，你还可以在 `shutil` 模块中找到很多实用函数，它们可以看做是对 `os` 模块的补充。
+
+最后看看如何利用Python的特性来过滤文件。比如我们要列出当前目录下的所有目录，只需要一行代码：
+
+```python
+>>> [x for x in os.listdir('.') if os.path.isdir(x)]
+['.lein', '.local', '.m2', '.npm', '.ssh', '.Trash', '.vim', 'Applications', 'Desktop', ...]
+```
+
+要列出所有的 `.py` 文件，也只需一行代码：
+
+```python
+>>> [x for x in os.listdir('.') if os.path.isfile(x) and os.path.splitext(x)[1]=='.py']
+['apis.py', 'config.py', 'models.py', 'pymonitor.py', 'test_db.py', 'urls.py', 'wsgiapp.py']
+```
+
+是不是非常简洁？
+
+---
