My_Python_Notebook：操作目录和文件-小结

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -351,13 +351,13 @@ seek(pos, whence=0, /) method of _io.StringIO instance
 
 <br>
 
-## 操作文件和目录
+## 操作目录和文件
 
 ### 简述
 
-在命令行下，我们可以通过输入操作系统提供的各种命令，比如dir、cp等，来操作文件和目录。这些命令的本质其实就是简单地调用了**操作系统提供的接口函数**。
+在命令行下，我们可以通过输入操作系统提供的各种命令，比如dir、cp等，来操作目录和文件。这些命令的本质其实就是简单地调用了**操作系统提供的接口函数**。
 
-那如果想在Python程序中操作文件和目录该怎么办呢？Python内置的 `os` 模块同样给与我们调用操作系统提供的接口函数的能力。
+那如果想在Python程序中操作目录和文件该怎么办呢？Python内置的 `os` 模块同样给与我们调用操作系统提供的接口函数的能力。
 
 打开Python交互式命令行，首先看看如何使用 `os` 模块的基本功能：
 
@@ -402,9 +402,9 @@ environ({'VERSIONER_PYTHON_PREFER_32_BIT': 'no', 'TERM_PROGRAM_VERSION': '326', 
 
 ---
 
-### 操作文件和目录
+### 操作目录和文件
 
-除了前面的 `os` 模块中，操作文件和目录的函数还有一部分放在 `os.path` 模块中。比方说用于生成绝对路径的 `abspath()` 函数：
+除了前面的 `os` 模块中，操作目录和文件的函数还有一部分放在 `os.path` 模块中。比方说用于生成绝对路径的 `abspath()` 函数：
 
 ```python
 >>> os.path.abspath('.') # 点符代表当前工作路径
@@ -458,7 +458,7 @@ part-1\part-2
 ('/path/to/file', '.txt')
 ```
 
-这些合并、拆分路径的函数**并不要求文件和目录真实存在**，它们只是对字符串进行操作。
+这些合并、拆分路径的函数**并不要求目录和文件真实存在**，它们只是对字符串进行操作。
 
 文件操作使用下面的函数。假定当前目录下有一个 `test.txt` 文件：
 
@@ -490,3 +490,7 @@ part-1\part-2
 是不是非常简洁？
 
 ---
+
+### 小结
+
+Python的 `os` 模块封装了操作系统的目录和文件操作，要注意这些函数有的在 `os` 模块中，有的在 `os.path` 模块中。
