My_Python_Notebook：操作目录和文件-习题（习题1）

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -494,3 +494,57 @@ part-1\part-2
 ### 小结
 
 Python的 `os` 模块封装了操作系统的目录和文件操作，要注意这些函数有的在 `os` 模块中，有的在 `os.path` 模块中。
+
+### 练习
+
+#### 习题1
+
+> 利用 `os` 模块编写一个能实现 `ls -l` 输出的程序。
+
+先看看 `ls -l` 做的是什么：
+
+```shell
+ubuntu@ubuntu:~/HumanFaceRecognitionWithNN$ ls -l
+total 344
+-rw-rw-r-- 1 ubuntu ubuntu  10301 Dec 14 22:28 face_recognition.py
+drwxrwxr-x 3 ubuntu ubuntu   4096 Dec 21 15:50 test
+-rw-rw-r-- 1 ubuntu ubuntu 328506 Dec 10 15:39 yaleB_face_dataset.mat
+```
+
+注意这是在Linux上执行的，我们想查看当前路径下有什么文件和文件夹可以使用 `ls` 或者 `dir` 命令，而如果我们想了解更详细的信息则可以用 `ls -l` 或者`dir -l` 命令。
+
+这里稍微解析一下返回的信息吧，以下面这一条为例：
+
+| field1 | field2 | field3 | field4 | field5 | field6 | field7 | field8 | field9 | field10 |
+|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
+| - | rw- | rw- | r-- | 1 | ubuntu | ubuntu | 10301 | Dec 14 22:28 | face_recognition.py |
+
+- field1 是 `File type flag`，**标识文件类型**，如果是 `-` 则表明是普通文件，是 `d` 则表明是一个目录；
+- field2、field3、field4 依次是拥有者、拥有者所在的用户组以及其他用户对**该文件/文件夹的操作权限**，`r` 表示可读，`w` 表示可写， `x` 表示可执行。
+- field5 是**所含链接数**，如果该项是一个文件，则链接数为1；如果该项是一个目录，则一般为**该目录下子文件夹数+2**。为什么呢？因为当前目录（该项的父目录）有一条指向该项的链接，而对文件夹来说，除了父目录的链接之外，它本身还有一条 `.` 链接指向自身，并且它的子目录都有一条 `..` 链接指向它；
+- field6 是**拥有者的名字**；
+- field7 是**拥有者所在的用户组**；
+- field8 是**该项的大小**（多少bytes）；
+- field9 是**最后修改该项的日期和时间**；
+- field10 是**该项的名字**。
+
+我们注意到，除了每一项的详细信息之外，最前面还有一行输出 `total 344`，这个344是什么呢？它指的是当前目录所有文件和文件夹所使用的块（block）的数目，块是一个操作系统的概念，这里不详细展开。如果我们想知道当前目录下每一项所使用的块的数目，可以使用 `ls -s`命令：
+
+```shell
+ubuntu@VM-173-69-ubuntu:~/HumanFaceRecognitionWithNN$ ls -s
+total 344
+ 12 face_recognition.py    4 test  328 yaleB_face_dataset.mat
+```
+
+加起来总数正是 `344`。
+
+以上内容参考了以下几个链接：
+
+- [What is that “total” in the very first line after ls -l?](http://stackoverflow.com/questions/7401704/what-is-that-total-in-the-very-first-line-after-ls-l)
+- [command ls -l output explained](http://go2linux.garron.me/command-ls-file-permissions/)
+- [What do the fields in ls -al output mean?](http://unix.stackexchange.com/questions/103114/what-do-the-fields-in-ls-al-output-mean)
+- [What does each part of the `ls -la` output mean?](http://askubuntu.com/questions/710905/what-does-each-part-of-the-ls-la-output-mean)
+
+题目要求实现Python版的 `ls -l`，理论上应该是可行的，但上面的内容只涉及到 `os` 和 `os.path` 模块中很少的函数，其他的还有待发掘。我暂时没有时间去琢磨，所以先略过这一题。
+
+
