My_Python_Notebook：操作目录和文件-习题（习题2）

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -547,4 +547,43 @@ total 344
 
 题目要求实现Python版的 `ls -l`，理论上应该是可行的，但上面的内容只涉及到 `os` 和 `os.path` 模块中很少的函数，其他的还有待发掘。我暂时没有时间去琢磨，所以先略过这一题。
 
+#### 习题2
 
+> 编写一个程序，能在当前目录以及当前目录的所有子目录下查找文件名包含指定字符串的文件，并打印出相对路径。
+
+```python
+import os
+
+def search(s, path=os.getcwd()):
+    filelst = [x for x in os.listdir(path)]
+    for filename in filelst:
+        filepath = os.path.join(path, filename)
+        # print('Searching: ', path, '\nWith: ', filepath)
+        if os.path.isfile(filepath):
+            if s in filename:
+                print(os.path.relpath(filepath))
+        elif os.path.isdir(filepath):
+            search(s, filepath)
+
+if __name__ == '__main__':
+    s = input('Enter the string: ')
+    search(s)
+```
+
+这题还是挺有意思的，用户自己定义搜索的字符串，我们不仅要找出当前目录下包含该字符串的文件，还要搜索所有的子目录。我们可以把搜索一个目录的过程封装为 `search` 函数，并采用递归的方式来实现其子目录的搜索。思路如下：
+
+1. 获取当前目录的所有文件&目录名，使用 `os.listdir()` 函数可以实现，把这些名称放在一个列表里保存；
+
+2. 接下来逐个遍历并判断列表中的元素是文件还是目录，可以使用 `os.path.isfile()` 和 `os.path.isdir()` 函数；
+    - 如果当前遍历到的元素是文件，则使用 `os.path.relpath()` 函数输出文件的相对路径；
+    - 如果当前遍历到的元素是目录，则将该目录的路径传入 `search` 函数。
+
+特别地，我们要注意这些函数应该输入什么和会输出什么。`os.path.relpath()` 函数接收一条完整的绝对路径，并输出**相对于当前工作路径（在命令行中执行该Python文件时所处的路径）的相对路径**，所以我们要先构造出正确的绝对路径，才能获取正确的相对路径。
+
+`os.path.isdir()` 可以接收相对路径也可以接收绝对路径，因为我们使用 `os.listdir()` 只能获得文件或目录的名称，在搜索子目录时，这些名称并不是相对于当前工作路径的相对路径，所以不能直接传入 `os.listdir()` 中，必须先构造绝对路径，然后再判断。
+
+为什么不使用 `os.path.abspath()` 函数来生成绝对路径呢？因为**传入 `os.path.abspath()` 函数的必须是一条正确的相对路径，才会得到正确的相对路径**。举个例子，当前工作路径是 `C:\Users\Administrator\Desktop`，其子目录 `test1` 中有一个文件 `test2.py`，如果我们使用 `os.path.abspath('test2.py')`，那么得到的绝对路径就变成了 `C:\Users\Administrator\Desktop\test2.py`，显然是不对的。
+
+---
+
+<br>
