My_Python_Notebook：序列化-序列化和反序列化

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -587,3 +587,14 @@ if __name__ == '__main__':
 ---
 
 <br>
+
+## 序列化
+
+### 序列化和反序列化
+
+在程序运行的过程中，所有的变量都保存在内存中，而一旦程序结束，变量所占用的内存就会被操作系统全部回收。但是，有时候，我们希望通过程序修改了某个变量的值之后，能够让另一个程序能调用这个变量。比方说在程序1中定义了一个 `list`，并且经过某些高开销的操作修改了这个 `list` 的值。如果我们想在程序2中使用程序1中修改后的 `list`，按之前的做法就只能把程序1作为一个模块，在程序2中执行程序1的代码，这样一来，就必须重复执行高开销的操作了。有没有解决这个问题的方法呢？有的，答案就是**序列化**。
+
+我们把**将变量从内存中保存的格式变成可存储或可传输的格式这个过程称之为序列化**，在Python中叫 `pickling`，在其他语言中也被称之为 `serialization`，`marshalling`，`flattening` 等等，都是一个意思。经过序列化之后，内存中的变量就由原来的格式（某种数据结构/类型）转换为特定的格式，从而可以被存储或传输，这样另一个程序需要用到时就可以直接读取，而不必重复计算了。
+
+反过来，把**将变量内容从序列化的对象重新读到内存里还原为原来的格式这一过程称之为反序列化**，即 `unpickling`。
+
