--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -598,3 +598,37 @@ if __name__ == '__main__':
 
 反过来，把**将变量内容从序列化的对象重新读到内存里还原为原来的格式这一过程称之为反序列化**，即 `unpickling`。
 
+---
+
+### 序列化（pickle）
+
+在[01Python基础](https://github.com/familyld/learnpython/blob/master/My_Python_Notebook/01Python%E5%9F%BA%E7%A1%80.md)中，我们就知道**传输和存储都是以字节（bytes）为单位的**，所以这节首先介绍一种将变量序列化为 `bytes` 对象的方法，Python提供了 `pickle` 模块来实现这一功能。
+
+以 `dict` 为例，将一个 `dict` 类型的对象序列化并写入文件：
+
+>>> import pickle
+>>> d = dict(name='Bob', age=20, score=88)
+>>> pickle.dumps(d)
+b'\x80\x03}q\x00(X\x03\x00\x00\x00ageq\x01K\x14X\x05\x00\x00\x00scoreq\x02KXX\x04\x00\x00\x00nameq\x03X\x03\x00\x00\x00Bobq\x04u.'
+
+`pickle.dumps()` 函数可以把任意变量序列化为一个 `bytes` 对象。我们可以把这个 `bytes` 对象写入文件。此外，我们也可以用 `pickle.dump()` 函数直接把对象序列化后**写入一个 `file-like Object`**：
+
+>>> f = open('dump.txt', 'wb')
+>>> pickle.dump(d, f)
+>>> f.close()
+
+打开 `dump.txt` 文件，我们会看到一堆乱七八糟无法阅读的内容，这些都是Python保存的对象信息。
+
+当我们需要还原变量，也即把对象从磁盘读到内存时，可以先把内容读入到一个 `bytes` 对象中，然后用 `pickle.loads()` 方法反序列化出对象，也可以直接用 `pickle.load()` 方法从一个 `file-like Object` 中直接反序列化出对象。打开另一个Python命令行，试试反序列化刚才保存的对象：
+
+>>> f = open('dump.txt', 'rb')
+>>> d = pickle.load(f)
+>>> f.close()
+>>> d
+{'age': 20, 'score': 88, 'name': 'Bob'}
+
+可以看到我们成功地还原了这个 `dict` 类型的对象。
+
+有了 `Pickle` 之后，我们可以方便地在Python中进行序列化和反序列化。但是，和所有其他编程语言的序列化问题一样，`Pickle` 是一种Python特有的序列化解决方案，它只能用于Python，甚至不同版本的Python彼此都可能不兼容。如果我们使用Python写程序，而别人使用其他语言，比如Java，C++等，它们没有 `Pickle` 模块也就没办法进行反序列化了。
+
+---
