My_Python_Notebook：序列化-JSON

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -606,29 +606,71 @@ if __name__ == '__main__':
 
 以 `dict` 为例，将一个 `dict` 类型的对象序列化并写入文件：
 
+```python
 >>> import pickle
 >>> d = dict(name='Bob', age=20, score=88)
 >>> pickle.dumps(d)
 b'\x80\x03}q\x00(X\x03\x00\x00\x00ageq\x01K\x14X\x05\x00\x00\x00scoreq\x02KXX\x04\x00\x00\x00nameq\x03X\x03\x00\x00\x00Bobq\x04u.'
+```
 
 `pickle.dumps()` 函数可以把任意变量序列化为一个 `bytes` 对象。我们可以把这个 `bytes` 对象写入文件。此外，我们也可以用 `pickle.dump()` 函数直接把对象序列化后**写入一个 `file-like Object`**：
 
+```python
 >>> f = open('dump.txt', 'wb')
 >>> pickle.dump(d, f)
 >>> f.close()
+```
 
 打开 `dump.txt` 文件，我们会看到一堆乱七八糟无法阅读的内容，这些都是Python保存的对象信息。
 
 当我们需要还原变量，也即把对象从磁盘读到内存时，可以先把内容读入到一个 `bytes` 对象中，然后用 `pickle.loads()` 方法反序列化出对象，也可以直接用 `pickle.load()` 方法从一个 `file-like Object` 中直接反序列化出对象。打开另一个Python命令行，试试反序列化刚才保存的对象：
 
+```python
 >>> f = open('dump.txt', 'rb')
 >>> d = pickle.load(f)
 >>> f.close()
 >>> d
 {'age': 20, 'score': 88, 'name': 'Bob'}
+```
 
 可以看到我们成功地还原了这个 `dict` 类型的对象。
 
 有了 `Pickle` 之后，我们可以方便地在Python中进行序列化和反序列化。但是，和所有其他编程语言的序列化问题一样，`Pickle` 是一种Python特有的序列化解决方案，它只能用于Python，甚至不同版本的Python彼此都可能不兼容。如果我们使用Python写程序，而别人使用其他语言，比如Java，C++等，它们没有 `Pickle` 模块也就没办法进行反序列化了。
 
 ---
+
+### JSON
+
+如果我们要**在不同的编程语言之间传递对象**，就必须把对象序列化为通用的**标准格式**，比如序列化**XML（Extensible Markup Language，可扩展标记语言）**。但更好的方法是序列化为**JSON（JavaScript Object Notation，JavaScript对象表示法）**。因为JSON表示出来就是一个字符串，可以被所有语言读取，也可以方便地存储到磁盘或者通过网络传输。JSON不仅是标准格式，并且比XML更快，还可以直接在Web页面中读取，非常方便。
+
+比较一下Python内置的数据类型和JSON中的表示方式：
+
+| Python类型 | JSON表示 |
+|:-:|:-:|
+| dict | {} |
+| list | [] |
+| str | "string" |
+| int, float | 10, 1234.56 |
+| True/False | true/false |
+| None | null |
+
+Python内置的 `json` 模块提供了非常完善的Python对象到JSON格式的转换方法。同样对一个 `dict` 进行序列化，方法如下：
+
+```python
+>>> import json
+>>> d = dict(name='Bob', age=20, score=88)
+>>> json.dumps(d)
+'{"age": 20, "score": 88, "name": "Bob"}'
+```
+
+`dumps()` 方法**返回一个 `str`**，内容就是标准的JSON。类似的，`dump()` 方法可以直接把JSON写入一个 `file-like Object`。
+
+要把JSON反序列化为Python对象，用 `loads()` 或者对应的 `load()`方法，前者把JSON的字符串反序列化，后者从 `file-like Object` 中读取字符串并反序列化：
+
+```python
+>>> json_str = '{"age": 20, "score": 88, "name": "Bob"}'
+>>> json.loads(json_str)
+{'age': 20, 'score': 88, 'name': 'Bob'}
+```
+
+由于JSON标准规定**JSON编码是UTF-8**，所以我们总是能正确地在Python的 `str` 与JSON之间的转换。
