My_Python_Notebook：IO编程-目录

--- a/My_Python_Notebook/09IO编程.md
+++ b/My_Python_Notebook/09IO编程.md
@@ -1,5 +1,39 @@
 # IO编程
 
+## 目录
+
+<!-- MarkdownTOC -->
+
+- [什么是IO](#什么是io)
+- [文件读写](#文件读写)
+    - [读文件](#读文件)
+    - [写文件](#写文件)
+    - [file-like Object](#file-like-object)
+    - [二进制文件](#二进制文件)
+    - [字符编码](#字符编码)
+    - [小结](#小结)
+- [StringIO和BytesIO](#stringio和bytesio)
+    - [StringIO](#stringio)
+    - [BytesIO](#bytesio)
+    - [为什么使用StringIO和BytesIO](#为什么使用stringio和bytesio)
+    - [读写IO需要注意的地方](#读写io需要注意的地方)
+    - [小结](#小结-1)
+- [操作目录和文件](#操作目录和文件)
+    - [简述](#简述)
+    - [环境变量](#环境变量)
+    - [操作目录和文件](#操作目录和文件-1)
+    - [小结](#小结-2)
+    - [练习](#练习)
+- [序列化](#序列化)
+    - [序列化和反序列化](#序列化和反序列化)
+    - [序列化（pickle）](#序列化（pickle）)
+    - [JSON](#json)
+    - [JSON进阶](#json进阶)
+    - [小结](#小结-3)
+
+<!-- /MarkdownTOC -->
+
+
 ## 什么是IO
 
 IO在计算机中指**输入和输出（Input/Output）**。由于程序运行时，数据是在内存中驻留，并由CPU这个超快的计算核心来进行处理的（处理时会把数据从内存载入到CPU的高速缓存中），而涉及到数据交换的操作，比如磁盘读写、网络传输等的时候，就需要使用IO接口来协调了。
