My_Python_Notebook：进程和线程简介-小结

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -34,4 +34,8 @@
 
 Python既支持多进程，又支持多线程，在接下来的这一章，我们会讨论如何编写这两种多任务程序。
 
+### 小结
 
+**线程是最小的执行单元，进程由至少一个线程组成**。如何调度进程和线程，完全由操作系统决定，程序自己不能决定自己什么时候被执行，执行多长时间。
+
+多进程和多线程的程序涉及到同步、数据共享等问题，编写起来更复杂。
