--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -14,6 +14,8 @@
 
 真正的并行执行多任务只能在多核CPU上实现，但是，由于**任务数量往往是远多于CPU的核心数量的**，要给每个任务都分配一个CPU内核是不现实的，所以实际上操作系统会自动把很多任务轮流调度到每个核心上执行。
 
+---
+
 ### 进程和线程的含义
 
 对于操作系统来说，一个任务就是一个**进程（Process）**，比如打开一个浏览器就是启动一个浏览器进程，打开一个记事本就启动了一个记事本进程，打开两个记事本就启动了两个记事本进程，打开一个Word就启动了一个Word进程。
@@ -34,8 +36,52 @@
 
 Python既支持多进程，又支持多线程，在接下来的这一章，我们会讨论如何编写这两种多任务程序。
 
+---
+
 ### 小结
 
 **线程是最小的执行单元，进程由至少一个线程组成**。如何调度进程和线程，完全由操作系统决定，程序自己不能决定自己什么时候被执行，执行多长时间。
 
 多进程和多线程的程序涉及到同步、数据共享等问题，编写起来更复杂。
+
+---
+
+<br>
+
+## 多进程
+
+### fork函数
+
+要让Python程序实现**多进程（multiprocessing）**，我们先得了解操作系统的相关知识。
+
+Unix/Linux操作系统提供了一个 `fork()` 系统调用函数，它非常特殊。普通的函数在被调用时，调用一次只会返回一次。但是 `fork()` 函数调用一次会返回两次，因为此时操作系统会自动把当前进程（称为父进程）复制一份（称为子进程），然后分别在父进程和子进程内进行返回。
+
+**子进程永远返回0，而父进程返回子进程的ID**。这样做的理由是，一个父进程可以fork出很多子进程，所以，父进程要记下每个子进程的ID，而子进程只需要调用 `getppid()` 就可以拿到父进程的ID。
+
+Python的 `os` 模块封装了常见的系统调用，其中就包括fork，可以在Python程序中轻松创建子进程：
+
+```python
+import os
+
+print('Process (%s) start...' % os.getpid())
+# Only works on Unix/Linux/Mac:
+pid = os.fork()
+if pid == 0:
+    print('I am child process (%s) and my parent is %s.' % (os.getpid(), os.getppid()))
+else:
+    print('I (%s) just created a child process (%s).' % (os.getpid(), pid))
+```
+
+运行结果如下：
+
+```python
+Process (876) start...
+I (876) just created a child process (877).
+I am child process (877) and my parent is 876.
+```
+
+由于Windows没有fork调用，上面的代码在Windows上无法运行。而Mac系统是基于BSD（Unix的一种）内核，所以，在Mac下运行是没有问题的~
+
+有了fork调用，一个进程在接到新任务时就可以复制出一个子进程来处理新任务，常见的Apache服务器就是由父进程监听端口，每当有新的http请求时，就fork出子进程来处理新的http请求。
+
+---
