My_Python_Notebook：多进程-multiprocessing

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -80,8 +80,50 @@ I (876) just created a child process (877).
 I am child process (877) and my parent is 876.
 ```
 
+这段代码在执行第一个print时只有一个进程（876），因此只打印一次。然后在执行 `fork()` 之后，当前进程（876）被复制出一个子进程（877）。当前进程会先返回，返回子进程ID（877），然后往下走进入if-else代码块，进入else语句进行打印；其后子进程（877）返回0，同样往下走，进入if-else代码块，进入if语句进行打印。
+
 由于Windows没有fork调用，上面的代码在Windows上无法运行。而Mac系统是基于BSD（Unix的一种）内核，所以，在Mac下运行是没有问题的~
 
 有了fork调用，一个进程在接到新任务时就可以复制出一个子进程来处理新任务，常见的Apache服务器就是由父进程监听端口，每当有新的http请求时，就fork出子进程来处理新的http请求。
+
+---
+
+### multiprocessing
+
+如果你打算编写多进程的服务程序，Unix/Linux无疑是正确的选择。由于Windows没有fork调用，难道在Windows上无法用Python编写多进程的程序？
+
+由于Python是跨平台的，自然也应该提供跨平台的多进程支持。`multiprocessing` 模块就是跨平台版本的多进程模块。
+
+`multiprocessing` 模块提供了一个 `Process` 类来代表一个进程对象，下面的例子演示了启动一个子进程并等待其结束：
+
+```python
+from multiprocessing import Process
+import os
+
+# 子进程要执行的代码
+def run_proc(name):
+    print('Run child process %s (%s)...' % (name, os.getpid()))
+
+if __name__=='__main__':
+    print('Parent process %s.' % os.getpid())
+    p = Process(target=run_proc, args=('test',))
+    print('Child process will start.')
+    p.start()
+    p.join()
+    print('Child process end.')
+```
+
+执行结果如下：
+
+```python
+Parent process 928.
+Process will start.
+Run child process test (929)...
+Process end.
+```
+
+创建子进程时，只需要传入一个执行函数和该函数的参数就可以创建一个 `Process` 实例。用 `start()` 方法就可以启动这个子进程，这样创建进程要比 `fork()` 更简单和灵活。
+
+`join()` 方法可以**等待子进程结束后再继续往下运行**，通常用于进程间的同步。
 
 ---
